fix low-contrast issue
Browser was lightening text because it thought dark mode was supported

--- a/online.manchester.ac.uk.scss
+++ b/online.manchester.ac.uk.scss
@@ -1,9 +1,5 @@
 @import "globals";
 
-:root {
-	color-scheme: light dark;
-}
-
 /* set better fonts */
 * {
 	font-family: $font-family !important;
